updated at: 2020-03-13 22:38, 【3Dアバター用】女性アバター素体ボディ[Ver.9] - TOY-BOX - BOOTH

--- a/VRChat/56/970356.html
+++ b/VRChat/56/970356.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【3Dアバター用】女性アバター素体ボディ[Ver.8] - TOY-BOX - BOOTH
+      【3Dアバター用】女性アバター素体ボディ[Ver.9] - TOY-BOX - BOOTH
     </title>
     <meta name="description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
@@ -13,18 +13,18 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【3Dアバター用】女性アバター素体ボディ[Ver.8] - TOY-BOX - BOOTH">
+    "【3Dアバター用】女性アバター素体ボディ[Ver.9] - TOY-BOX - BOOTH">
     <meta name="twitter:description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/812e1365-b4a0-465c-a650-6cb1c2370d0f_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7509a8f2-c602-4c32-b217-3f93f086b5b9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【3Dアバター用】女性アバター素体ボディ[Ver.8] - TOY-BOX - BOOTH">
+    "【3Dアバター用】女性アバター素体ボディ[Ver.9] - TOY-BOX - BOOTH">
     <meta property="og:description" content=
     "3Dアバター制作用の女性型素体ボディです。 改変・パーツ流用にお使い下さい。 商用・非商用問わずご利用可能です。 　 ◆禁止事項◆ このモデルに関する禁止事項はひとつだけです。 『未加工での再配布・販売を禁じます』 　※著作権は放棄しておりません。 クレジット表記の必要はありませんが、表記していただけると作者が喜びますw もし表記していただける場合は↓このように書いていただけると嬉しいです。 作者名:『倭文』『しとり』『sitori』のいずれか Twitter:@toy_box_sitori HP：http://toy-box.link ◆同梱データ◆ ・blenderデータ ・fbxデータ">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/812e1365-b4a0-465c-a650-6cb1c2370d0f_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7509a8f2-c602-4c32-b217-3f93f086b5b9_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/970356">
     <meta name="ga:shop" content="UA-4187674-15">
@@ -130,7 +130,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          【3Dアバター用】女性アバター素体ボディ[Ver.8]
+                          【3Dアバター用】女性アバター素体ボディ[Ver.9]
                         </h2>
                         <div class=
                         "u-text-assertive u-tpg-caption1"></div>
@@ -223,7 +223,7 @@
                           "https://booth.pm/ja/items/970356"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【3Dアバター用】女性アバター素体ボディ[Ver.8] | TOY-BOX"
+                          "【3Dアバター用】女性アバター素体ボディ[Ver.9] | TOY-BOX"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -242,28 +242,46 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.8]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.9]"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/812e1365-b4a0-465c-a650-6cb1c2370d0f_base_resized.jpg">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7509a8f2-c602-4c32-b217-3f93f086b5b9_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.8]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.9]"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/cdbfb571-a13e-4891-9d01-e6006aa71282_base_resized.jpg">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/4a35d1b6-e1c5-474e-8ec6-a61c6039a755_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.8]"
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.9]"
                             class="market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/348a6fd6-7c8e-44d4-a966-6b4862a1af6d_base_resized.jpg">
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/89bce76a-ae6f-4f64-816b-adeda7e68c22_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.9]"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7adb4269-990a-48d5-a4b9-abdc172a42b4_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="【3Dアバター用】女性アバター素体ボディ[Ver.9]"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/124701ed-f3e3-43c3-916c-dc5021b8fe57_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -272,15 +290,23 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/812e1365-b4a0-465c-a650-6cb1c2370d0f_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7509a8f2-c602-4c32-b217-3f93f086b5b9_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/cdbfb571-a13e-4891-9d01-e6006aa71282_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/4a35d1b6-e1c5-474e-8ec6-a61c6039a755_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/348a6fd6-7c8e-44d4-a966-6b4862a1af6d_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/89bce76a-ae6f-4f64-816b-adeda7e68c22_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/7adb4269-990a-48d5-a4b9-abdc172a42b4_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/8de2029e-20d0-43f2-ab7b-c159eb417152/i/970356/124701ed-f3e3-43c3-916c-dc5021b8fe57_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -300,6 +326,7 @@
                             ◆モデルに関する問題点やご指摘がありましたら◆ twitter:
                             @toy_box_sitori メールアドレス:
                             booth@toy-box.link までご一報下さい。 ◆修正履歴◆
+                            ◇2020.03.13◇ 新しく制作したVer9をアップしました。
                             ◇2019.08.28◇
                             新しくトポロジーを調整しなおしたVer8をアップしました。
                             ◇2019.04.30◇
