updated at: 2020-03-13 22:54, [Free] PictoMan【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/13/951813.html
+++ b/VRChat/13/951813.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      [Free] PictoMan【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH
+      [Free] PictoMan【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "VRChatでの使用を想定した3Dモデルです。 街でよく見かけるアイツ。 &quot;FINGERPOINT&quot; で非常口が出現！しかもワールド固定！！ さらにパーティクル付き！！！！ アバター・非常口合わせても△2,626ポリゴンと少なめなので、アバターとしての利用以外にも、アクセサリや複数配置、ハイポリ化など様々な用途に使用できます。 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 ちなみに、当モデルは過去に制作した映像作品『非常口のCMを作ってみた。』に登場する &quot;緑のアイツ&quot;">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[Free] PictoMan【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "[Free] PictoMan【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "VRChatでの使用を想定した3Dモデルです。 街でよく見かけるアイツ。 &quot;FINGERPOINT&quot; で非常口が出現！しかもワールド固定！！ さらにパーティクル付き！！！！ アバター・非常口合わせても△2,626ポリゴンと少なめなので、アバターとしての利用以外にも、アクセサリや複数配置、ハイポリ化など様々な用途に使用できます。 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 ちなみに、当モデルは過去に制作した映像作品『非常口のCMを作ってみた。』に登場する &quot;緑のアイツ&quot;">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/951813/9be70351-208f-4c5f-bf15-1257aff231ae_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[Free] PictoMan【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "[Free] PictoMan【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "VRChatでの使用を想定した3Dモデルです。 街でよく見かけるアイツ。 &quot;FINGERPOINT&quot; で非常口が出現！しかもワールド固定！！ さらにパーティクル付き！！！！ アバター・非常口合わせても△2,626ポリゴンと少なめなので、アバターとしての利用以外にも、アクセサリや複数配置、ハイポリ化など様々な用途に使用できます。 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 ちなみに、当モデルは過去に制作した映像作品『非常口のCMを作ってみた。』に登場する &quot;緑のアイツ&quot;">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -300,7 +300,7 @@
                           "https://booth.pm/ja/items/951813"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "[Free] PictoMan【3Dモデル】 | 渡篠処（わたしのところ）"
+                          "[Free] PictoMan【3Dモデル】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
