updated at: 2020-03-14 01:39, 「seamouse セーネ」オリジナル３Dモデル - Seapon Factory - BOOTH

--- a/VRChat/33/1271333.html
+++ b/VRChat/33/1271333.html
@@ -366,7 +366,7 @@
                             各種サービスで購入者以外が自由に本データ及び改変データを
                             利用可能な状態にすること。
                             本データ及び改変データを使用したゲームやアニメーションにおいて、
-                            再度仕様できる状態の本データを含むデータの配布。 【改変や流用について】
+                            再度使用できる状態の本データを含むデータの配布。 【改変や流用について】
                             改変後のデータの著作権もしーぽんに帰属します。
                             また、改変後のデータにも本規約は適用されます。
                             本データの一部又は全部を他データへ使用する場合、
