updated at: 2020-03-14 01:50, ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/17/1268317.html
+++ b/VRChat/17/1268317.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処（わたしのところ） - BOOTH
+      ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "無限に立方体が展開し続ける不思議なキューブ、通称 &quot;ノマキューブ&quot; (パタパタ立方体、カレイドキューブとも) の3DCGモデルです。 パタパタ動き続けるアニメーション付き、改変しやすいテクスチャPSDファイルを同梱していますので自由なカスタマイズが可能です。 また、動くたびに全体が軽く揺れるアニメーションファイルも付属しています。 ℹFANBOX支援者向けに同ファイルを配布しています。そちらもご確認ください。 https://www.pixiv.net/fanbox/creator/17346029/post/315773 - - - It is a 3DCG model of a">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処（わたしのところ） - BOOTH">
+    "ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "無限に立方体が展開し続ける不思議なキューブ、通称 &quot;ノマキューブ&quot; (パタパタ立方体、カレイドキューブとも) の3DCGモデルです。 パタパタ動き続けるアニメーション付き、改変しやすいテクスチャPSDファイルを同梱していますので自由なカスタマイズが可能です。 また、動くたびに全体が軽く揺れるアニメーションファイルも付属しています。 ℹFANBOX支援者向けに同ファイルを配布しています。そちらもご確認ください。 https://www.pixiv.net/fanbox/creator/17346029/post/315773 - - - It is a 3DCG model of a">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1268317/5d2e0ef1-9dc0-4d16-809f-ae41a9dfc236_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処（わたしのところ） - BOOTH">
+    "ノマキューブ / Noma cube【3Dモデル/モーション】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "無限に立方体が展開し続ける不思議なキューブ、通称 &quot;ノマキューブ&quot; (パタパタ立方体、カレイドキューブとも) の3DCGモデルです。 パタパタ動き続けるアニメーション付き、改変しやすいテクスチャPSDファイルを同梱していますので自由なカスタマイズが可能です。 また、動くたびに全体が軽く揺れるアニメーションファイルも付属しています。 ℹFANBOX支援者向けに同ファイルを配布しています。そちらもご確認ください。 https://www.pixiv.net/fanbox/creator/17346029/post/315773 - - - It is a 3DCG model of a">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -226,7 +226,7 @@
                           "https://booth.pm/ja/items/1268317"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "ノマキューブ / Noma cube【3Dモデル/モーション】 | 渡篠処（わたしのところ）"
+                          "ノマキューブ / Noma cube【3Dモデル/モーション】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -404,6 +404,39 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 3D用モーション
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E3%82%BA">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ラーメンズ
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E5%B0%8F%E6%9E%97%E8%B3%A2%E5%A4%AA%E9%83%8E">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                小林賢太郎
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%83%9D%E3%83%84%E3%83%8D%E3%83%B3">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ポツネン
                               </div>
                             </div></a>
                           </div>
