updated at: 2020-03-14 15:40, TOONY FOX【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/32/1380532.html
+++ b/VRChat/32/1380532.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      TOONY FOX【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH
+      TOONY FOX【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "『カートゥーン世界の狐娘』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #ToonyFox ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - This is an original 3D model with the concept of &quot;The fox girl of the">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "TOONY FOX【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "TOONY FOX【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "『カートゥーン世界の狐娘』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #ToonyFox ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - This is an original 3D model with the concept of &quot;The fox girl of the">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1380532/d3a03880-ae3a-44b8-a642-fa8d16e27843_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "TOONY FOX【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "TOONY FOX【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "『カートゥーン世界の狐娘』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #ToonyFox ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・ユニティちゃんトゥーンシェーダー2.0 ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - This is an original 3D model with the concept of &quot;The fox girl of the">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -226,7 +226,7 @@
                           "https://booth.pm/ja/items/1380532"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "TOONY FOX【3Dモデル】 | 渡篠処（わたしのところ）"
+                          "TOONY FOX【3Dモデル】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
