updated at: 2020-03-14 16:06, 氷の結晶 - ice-room - BOOTH

--- a/VRChat/53/1187153.html
+++ b/VRChat/53/1187153.html
@@ -6,7 +6,7 @@
       氷の結晶 - ice-room - BOOTH
     </title>
     <meta name="description" content=
-    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1187153">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="氷の結晶 - ice-room - BOOTH">
     <meta name="twitter:description" content=
-    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/01b2c36e-ce95-4d9b-aac7-e49dbbc88cd3/i/1187153/06696148-2d50-46ad-920d-4cbe1bb8bdf6_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="氷の結晶 - ice-room - BOOTH">
     <meta property="og:description" content=
-    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 フリー版と有料版の内容物は同じものです。 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
+    "[氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。 テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。 写真はice shaderを利用したものです。 [内容物] ・氷の結晶L △696 ・氷の結晶S △531 [利用について] ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。 ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。 ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/01b2c36e-ce95-4d9b-aac7-e49dbbc88cd3/i/1187153/06696148-2d50-46ad-920d-4cbe1bb8bdf6_base_resized.jpg">
     <meta property="og:url" content=
@@ -76,7 +76,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="ice-room" data-product-category="127"
         data-product-id="1187153" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        data-product-price="120" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -159,65 +159,13 @@
                                   <div class=
                                   "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
                                     <div class=
-                                    "variation-name u-text-wrap">
-                                      フリー版
-                                    </div>
-                                    <div class=
                                     "u-tpg-caption1 u-text-gray-300">
                                       ダウンロード商品
                                     </div>
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 0
-                                  </div>
-                                </div>
-                                <div class="variation-cart">
-                                  <div class="cart-button-wrap">
-                                    <a class=
-                                    "btn add-cart full-length"
-                                    title="ice.zip" href=
-                                    "https://booth.pm/downloadables/482123">
-                                    <div class="u-d-block">
-                                      <span class=
-                                      "cmd-label">無料ダウンロード</span>
-                                    </div>
-                                    <div class=
-                                    "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
-                                      <div class=
-                                      "u-text-ellipsis u-max-w-50">
-                                        ice
-                                      </div>
-                                      <div>
-                                        .zip
-                                      </div>
-                                      <div>
-                                        &nbsp;(32.7 KB)
-                                      </div>
-                                    </div></a>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </li>
-                          <li class="variation-item u-border-t">
-                            <div class="u-d-flex">
-                              <div class="u-flex-1 u-min-w-0">
-                                <div class="u-d-flex">
-                                  <div class=
-                                  "u-flex-1 u-min-w-0 u-d-flex u-flex-column u-mr-500">
-                                    <div class=
-                                    "variation-name u-text-wrap">
-                                      投げ銭用
-                                    </div>
-                                    <div class=
-                                    "u-tpg-caption1 u-text-gray-300">
-                                      ダウンロード商品
-                                    </div>
-                                  </div>
-                                  <div class=
-                                  "variation-price u-text-right">
-                                    ¥ 100
+                                    ¥ 120
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -230,7 +178,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1187153"
-                                      data-product-price="100"
+                                      data-product-price="120"
                                       data-product-brand="ice-room"
                                       data-product-category="127"
                                       data-product-variant=
@@ -246,7 +194,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1187153"
-                                        data-product-price="100"
+                                        data-product-price="120"
                                         data-product-brand=
                                         "ice-room"
                                         data-product-category="127"
@@ -350,9 +298,8 @@
                             [氷の結晶 紹介文] 氷の結晶です。 大きめと小さめの2種類です。
                             テクスチャ等は設定されていないのでシェーダーなどで設定すると綺麗になると思います。
                             写真はice shaderを利用したものです。 [内容物] ・氷の結晶L
-                            △696 ・氷の結晶S △531 フリー版と有料版の内容物は同じものです。
-                            [利用について] ・この商品の再配布・販売を禁止します。
-                            また改変したものも同様に禁止とします。
+                            △696 ・氷の結晶S △531 [利用について]
+                            ・この商品の再配布・販売を禁止します。 また改変したものも同様に禁止とします。
                             ・本商品はVRChatでの利用を想定していますが、それ以外での利用を禁止していません。
                             ・この商品を利用して発生したトラブルに関して配布元は一切責任を負いません。
                           </p>
