updated at: 2020-03-14 16:19, 姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH

--- a/VRChat/77/1204377.html
+++ b/VRChat/77/1204377.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） -
-      BOOTH
+      姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH
     </title>
     <meta name="description" content=
     "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
@@ -14,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta name="twitter:description" content=
     "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1154c32c-e4a4-4167-b688-5231756d79b1/i/1204377/1b0e76bd-62ce-48af-8ce9-35af49b2eb28_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処（わたしのところ） - BOOTH">
+    "姫高校生ティラ / Princess student Thila【3Dモデル】 - 渡篠処 BOOTH拠点 - BOOTH">
     <meta property="og:description" content=
     "『王立高校に通うお姫様』がコンセプトのオリジナル3Dモデルです。 SNS推奨ハッシュタグ: #PrincessThila ⚠Unitypackageインポート前に⚠ 事前に以下のAssetsをプロジェクト内にインポートしておいてください。 ・Arktoon-Shaders ・DynamicBone ℹVRChatへのアバターアップロード手順： https://www.pixiv.net/fanbox/creator/17346029/post/572964 - - - It is an original 3D model with the concept of &quot;Princess going">
     <meta property="og:image" content=
@@ -134,11 +133,11 @@
                           href="https://namaewatashino.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="渡篠処（わたしのところ）" class=
+                            <img alt="渡篠処 BOOTH拠点" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1619820/icon_image/de1bd578-6db6-4049-a895-6a64be2d4d97_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              渡篠処（わたしのところ）
+                              渡篠処 BOOTH拠点
                             </div>
                           </div></a>
                         </div>
@@ -239,7 +238,7 @@
                           "https://booth.pm/ja/items/1204377"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "姫高校生ティラ / Princess student Thila【3Dモデル】 | 渡篠処（わたしのところ）"
+                          "姫高校生ティラ / Princess student Thila【3Dモデル】 | 渡篠処 BOOTH拠点"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
