updated at: 2020-03-14 16:31, 0123 in my room【VRChatワールド向けBGM】 - せや屋 - BOOTH

--- a/VRChat/51/1193751.html
+++ b/VRChat/51/1193751.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      0123 in my room【VRChatワールド向けBGM】 - kew - BOOTH
+      0123 in my room【VRChatワールド向けBGM】 - せや屋 - BOOTH
     </title>
     <meta name="description" content=
     "落ち着いた雰囲気のあるワールドに使えそうな感じのBGMです。 禁止事項 偽った著作表記 二次配布 曲だけを販売目的で使用する 上記に反しない場合は商用非商用限らず自由にしてもらって構いません。 使用報告はしなくてもいいですがTwitterで一言もらえると喜びます。 クレジット表記していただける際は BGM　Kew - 0123 in my room　 をお使いください。 1/25 少し修正を加えました">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "0123 in my room【VRChatワールド向けBGM】 - kew - BOOTH">
+    "0123 in my room【VRChatワールド向けBGM】 - せや屋 - BOOTH">
     <meta name="twitter:description" content=
     "落ち着いた雰囲気のあるワールドに使えそうな感じのBGMです。 禁止事項 偽った著作表記 二次配布 曲だけを販売目的で使用する 上記に反しない場合は商用非商用限らず自由にしてもらって構いません。 使用報告はしなくてもいいですがTwitterで一言もらえると喜びます。 クレジット表記していただける際は BGM　Kew - 0123 in my room　 をお使いください。 1/25 少し修正を加えました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/56117571-5fcc-4f33-9815-db26898aefb5/i/1193751/1b7e00e1-e035-44fa-99cb-264d204ef770_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "0123 in my room【VRChatワールド向けBGM】 - kew - BOOTH">
+    "0123 in my room【VRChatワールド向けBGM】 - せや屋 - BOOTH">
     <meta property="og:description" content=
     "落ち着いた雰囲気のあるワールドに使えそうな感じのBGMです。 禁止事項 偽った著作表記 二次配布 曲だけを販売目的で使用する 上記に反しない場合は商用非商用限らず自由にしてもらって構いません。 使用報告はしなくてもいいですがTwitterで一言もらえると喜びます。 クレジット表記していただける際は BGM　Kew - 0123 in my room　 をお使いください。 1/25 少し修正を加えました">
     <meta property="og:image" content=
@@ -118,11 +118,11 @@
                           href="https://kew.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="kew" class=
+                            <img alt="せや屋" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/1981608/icon_image/84a07f9f-187b-4714-aedf-3bd49b121f46_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/1981608/icon_image/7a32729b-78a0-41ba-931d-0691162ee86c_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              kew
+                              せや屋
                             </div>
                           </div></a>
                         </div>
@@ -207,7 +207,7 @@
                           "https://booth.pm/ja/items/1193751"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "0123 in my room【VRChatワールド向けBGM】 | kew"
+                          "0123 in my room【VRChatワールド向けBGM】 | せや屋"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -257,7 +257,7 @@
                                 0123 in my room【VRChatワールド向けBGM】
                               </div>
                               <div class="player_artist">
-                                kew
+                                せや屋
                               </div>
                             </div>
                             <div class="player_status_overall_bg">
