updated at: 2020-03-15 20:51, 《Ver.6.0》シャムシールHW（3Dキャラクターモデル） - 缶詰茶房 物販コーナー - BOOTH

--- a/VRChat/43/1051943.html
+++ b/VRChat/43/1051943.html
@@ -418,6 +418,8 @@
                             https://docs.google.com/document/d/10n9Vu5Jn6J0tdMiIHKese-cyFshzBuOZkFVhMCDPX7s/edit?usp=sharing
                             ＝＝＝check！！＝＝＝
                             DLする前に、物販コーナートップページの注意書きもよく読んでね
+                            ＝＝＝check！！＝＝＝
+                            通常ファイル･PMXファイルにはパスワード付いてるから説明書と利用規約を見てね
                           </p>
                         </div>
                       </section>
